--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,15 @@ p{
     font-size: 20px;
     font-weight: bold;
 }
+
+.drk:after{
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #000;
+    opacity: 0.2;
+}
